<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="history">借阅历史</string>
    <string name="remind">还书提醒</string>
    <string name="time">时间</string>
    <string name="default_time">8时30分</string>
    <string name="recommend">图书推荐</string>
    <string name="remind_cancel">取消</string>
    <string name="remind_ok">续借</string>
    <string name="app_name">超级图书馆</string>
    <string name="remote_serivice">网络服务</string>
    <string name="alarm_server">闹钟服务</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_login">超级图书馆</string>
    <string name="login">登录</string>
    <string name="school">学校</string>
    <string name="studentNumber">学号</string>
    <string name="password">密码</string>
    <string name="login_fail">登录失败，账号或密码有误</string>
    <string name="remain">32</string>
    <string name="personalNumber">管理账号</string>
    <string name="logout">注销</string>
    <string name="save">保存</string>
    <string name="setting">设置</string>
    <string name="set_remind">设置提前提醒时间</string>
    <string name="title_activity_home">HomeActivity</string>

</resources>
